--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -1,42 +1,92 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Chat App</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-
-<!--    bootstrap index-->
-
-    <h1 th:text="${session?.user?.name + ' - ' + session?.user?.status?.name}"></h1>
-
-    <form action="/login" method="post">
-        <label for="username"></label>
-        <input id="username" type="text" name="username">
-        <label for="password"></label>
-        <input id="password" type="password" name="password">
-        <input type="submit" value="log in">
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="home.html">Chat App</a>
+    <ul class="navbar-nav mr-auto d-flex flex-row justfiy-content-start">
+        <li class="nav-item active mr-3">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Friends</a>
+        </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
     </form>
+</nav>
 
-<!--    <label for="idk">Choos a status:</label>-->
-    <select name="status" id="status">
-        <option th:each="status : ${statuses}"  th:value="${status}" th:text="${status}"></option>
-    </select>
+<div class="login-form d-flex justify-content-center w-25 m-auto">
+    <form action="/login" method="post" class="flex-fill">
+        <h2 class="text-center">Log in</h2>
+        <div class="form-group">
+            <input id="username" type="text" name="username" class="form-control" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <input id="password" type="password" name="password" class="form-control" placeholder="Password">
+        </div>
+        <div class="form-group d-flex">
+            <button type="submit" class="btn btn-outline-info flex-fill">Log in</button>
+        </div>
+        <p class="text-center"><a href="#">Create an Account</a></p>
+    </form>
+</div>
 
-    <table id="friends">
-        <tr>
-            <th>name</th>
-            <th>status</th>
-        </tr>
-    </table>
-    <div>
-        <p>
-            <label for="name">name:</label>
-            <input type="text" name="name" id="name">
-        </p>
-        <input id="addfriend" type="submit" value="voeg toe">
+<div id="topics" class="container-fluid d-flex justify-content-center">
+    <div class="topic">
+        <h5>Was het een interessante projectweek? </h5>
+        <form>
+            <input type="text" name="commentInput">
+            <button type="submit">send</button>
+        </form>
     </div>
+    <div class="topic">
+        <h5>Wat ben je van plan om te doen vandaag? </h5>
+        <form>
+            <input type="text" name="commentInput">
+            <button type="submit">send</button>
+        </form>
+    </div>
+    <div class="topic">
+        <h5 >Naar welke muziek ben je momenteel aan het luisteren ? </h5>
+        <form>
+            <input type="text" name="commentInput">
+            <button type="submit">send</button>
+        </form>
+    </div>
+    <div class="topic">
+        <h5>Wat zijn de examenvragen voor het vak web4 </h5>
+        <form>
+            <input type="text" name="commentInput">
+            <button type="submit">send</button>
+        </form>
+    </div>
+    <div class="topic">
+        <h5>Wat vinden jullie van Corona ?</h5>
+        <form>
+            <input type="text" name="commentInput">
+            <button type="submit">send</button>
+        </form>
+    </div>
+</div>
 
-<script src="/main.js"></script>
+<script src="/comments.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 </html>
